--- a/src/index.ejs
+++ b/src/index.ejs
@@ -27,26 +27,18 @@
     <div class="container-fluid">
         <div class="nav-button"></div>
         <ul class="menu">
+            <% let menu__items = ['LISP', 'OCalm', 'JavaScript', 'Python', 'PHP'];
+                menu__items.forEach( (item, index) => {
+                let selected = index == 0 ? 'menu__link_selected' : ''; %>
             <li class="menu__item">
-                <a class="menu__link menu__link_selected" href="#">LISP</a>
+                <a class="menu__link <%= selected %>" href="#"><%= item %></a>
             </li>
-            <li class="menu__item">
-                <a class="menu__link" href="#">OCalm</a>
-            </li>
-            <li class="menu__item">
-                <a class="menu__link" href="#">JavaScript</a>
-            </li>
-            <li class="menu__item">
-                <a class="menu__link" href="#">Python</a>
-            </li>
-            <li class="menu__item">
-                <a class="menu__link" href="#">PHP</a>
-            </li>
+            <% }); %>
         </ul>
-        <div class="search right-on-tablet">
-            <input class="search__input">
+        <form method="get" class="search right-on-tablet">
+            <input class="search__input" name="query">
             <img class="search__icon" src="img/icons/search.svg">
-        </div>
+        </form>
     </div>
 </div>
 
@@ -69,34 +61,54 @@
             </div>
         </div>
 
-        <img class="product__image product__image_color_white left-on-desktop product__image_selected" src="img/tshirts/tshirt_white.jpg">
-        <img class="product__image product__image_color_yellow left-on-desktop" src="img/tshirts/tshirt_yellow.jpg">
-        <img class="product__image product__image_color_green left-on-desktop" src="img/tshirts/tshirt_green.jpg">
+        <img class="product__image left-on-desktop" src="img/tshirts/tshirt_white.jpg">
 
-        <div class="product__influence right-on-desktop">
+        <form method="post" class="product__form right-on-desktop">
             <div class="product__settings">
                 <div class="product__sizes">
                     <div class="product__option-group-name">Размер</div>
-                    <div class="product__option product__option_size_s product__option_selected"></div>
-                    <div class="product__option product__option_size_m"></div>
-                    <div class="product__option product__option_size_l"></div>
+                    <% let sizes = [
+                        { option_type: 'size',
+                          орtion_value: 's' },
+                        { option_type: 'size',
+                        орtion_value: 'm' },
+                        { option_type: 'size',
+                        орtion_value: 'l' } ];
+                    sizes.forEach( (item, index) => {
+                        let id = item.option_type + '_' + item.орtion_value;
+                        let mod = 'product__option_' + id;
+                        let checked = index == 0 ? 'checked' : ''; %>
+                        <input id= <%= id %> name='size' type="radio" <%= checked %> value= <%= item.орtion_value %> class="product__radio">
+                        <label for= <%= id %> class="product__option <%= mod %> product__option_<%= checked %>"><%= item.орtion_value %></label>
+                    <% }); %>
                 </div>
 
                 <div class="product__colors">
                     <div class="product__option-group-name">Цвет</div>
-                    <div class="product__option product__option_color_white product__option_selected"></div>
-                    <div class="product__option product__option_color_yellow"></div>
-                    <div class="product__option product__option_color_green"></div>
+                    <% let colors = [
+                        { option_type: 'color',
+                            орtion_value: 'white' },
+                        { option_type: 'color',
+                            орtion_value: 'yellow' },
+                        { option_type: 'color',
+                            орtion_value: 'green' } ];
+                    colors.forEach( (item, index) => {
+                        let id = item.option_type + '_' + item.орtion_value;
+                    let mod = 'product__option_' + id;
+                    let checked = index == 0 ? 'checked' : ''; %>
+                    <input id= <%= id %> name='color' type="radio" <%= checked %> value= <%= item.орtion_value %> class="product__radio">
+                    <label for= <%= id %> class="product__option <%= mod %> product__option_<%= checked %>" data-color=<%= item.орtion_value %>></label>
+                    <% }); %>
                 </div>
             </div>
 
             <div class="product__actions ">
-                <button class="product__buy">Купить</button>
+                <button type="submit" class="product__buy">Купить</button>
                 <div class="product__save">
                     <img class="product__heart" src="img/icons/heart-grey.svg">Отложить на потом
                 </div>
             </div>
-        </div>
+        </form>
     </div>
 
 </div>
@@ -106,28 +118,27 @@
         <div class="footer__links">
             <div class="footer__service">
                 <ul class="footer__group footer__group_centered-mobile padding-for-title">
-                    <li class="footer__item footer__title">Сервис и поддержка</li>
-                    <li class="footer__item"><a class="footer__link" href="#">Как сделать заказ</a></li>
-                    <li class="footer__item"><a class="footer__link" href="#">Возврат товара</a></li>
-                    <li class="footer__item"><a class="footer__link" href="#">Публичная оферта</a></li>
-                    <li class="footer__item"><a class="footer__link" href="#">Доставка</a></li>
-                    <li class="footer__item"><a class="footer__link" href="#">Спобобы оплаты</a></li>
-                    <li class="footer__item"><a class="footer__link" href="#">Правила продажи</a></li>
-                    <li class="footer__item"><a class="footer__link" href="#">Возврат денежных средств</a></li>
-                    <li class="footer__item"><a class="footer__link" href="#">Вопросы и ответы</a></li>
+                    <% let footer_service_links = ['Сервис и поддержка', 'Как сделать заказ', 'Возврат товара', 'Публичная оферта',
+                        'Доставка', 'Спобобы оплаты', 'Правила продажи', 'Возврат денежных средств', 'Вопросы и ответы'];
+                        footer_service_links.forEach( (item, index) => {
+                        let title = index == 0 ? 'footer__title' : ''; %>
+                        <li class="footer__item <%= title %>">
+                            <a class="footer__link" href="#"><%= item %></a>
+                        </li>
+                    <% }); %>
                 </ul>
             </div>
 
             <div class="footer__info">
                 <ul class="footer__group footer__group_centered-mobile padding-for-title">
-                    <li class="footer__item footer__title">О компании</li>
-                    <li class="footer__item"><a class="footer__link" href="#">О нас</a></li>
-                    <li class="footer__item"><a class="footer__link" href="#">Контакты</a></li>
-                    <li class="footer__item"><a class="footer__link" href="#">Вакансии</a></li>
-                    <li class="footer__item"><a class="footer__link" href="#">Партнерам</a></li>
-                    <li class="footer__item"><a class="footer__link" href="#">Сертификаты</a></li>
-                    <li class="footer__item"><a class="footer__link" href="#">Преимущества</a></li>
-                    <li class="footer__item"><a class="footer__link" href="#">Наши скидки</a></li>
+                    <% let footer_info_links = ['О компании', 'О нас', 'Контакты', 'Вакансии',
+                        'Партнерам', 'Сертификаты', 'Преимущества', 'Наши скидки'];
+                    footer_info_links.forEach( (item, index) => {
+                        let title = index == 0 ? 'footer__title' : ''; %>
+                    <li class="footer__item <%= title %>">
+                        <a class="footer__link" href="#"><%= item %></a>
+                    </li>
+                    <% }); %>
                 </ul>
             </div>
 
@@ -155,15 +166,12 @@
             </div>
 
             <ul class="footer__group footer__group_centered footer__network">
-                <li><a href="#">
-                    <img class="footer__img footer__img_l" src="img/icons/facebook.svg">
-                </a></li>
-                <li><a href="#">
-                    <img class="footer__img footer__img_l" src="img/icons/twitter.svg">
-                </a></li>
-                <li><a href="#">
-                    <img class="footer__img footer__img_l" src="img/icons/instagram.svg">
-                </a></li>
+                <% let networks = ['facebook', 'twitter', 'instagram']
+                   networks.forEach( item => { %>
+                    <li><a href="#">
+                        <img class="footer__img footer__img_l" src="img/icons/<%= item %>.svg">
+                    </a></li>
+                <% }); %>
             </ul>
         </div>
 
